Publish Basic Page

--- a/index.html
+++ b/index.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Luc van Kampen</title>
-</head>
-<body>
-    <h1>Luc van Kampen</h1>
-    <p>Hey its me!</p>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Luc van Kampen</title>
+        <script type="application/ld+json">
+            {
+                "@context": "https://schema.org",
+                "@type": "Person",
+                "address": {
+                    "@type": "PostalAddress",
+                    "addressLocality": "Breda",
+                    "addressRegion": "Noord-Brabant",
+                    "postalCode": "4812LB",
+                    "streetAddress": "Van Slingelandtstraat 53A, NL"
+                },
+                "colleague": [],
+                "email": "mailto:luc@v3x.email",
+                "image": "luc.jpg",
+                "jobTitle": "Chief Everything Officer",
+                "name": "Luc van Kampen",
+                "telephone": "+31618925911",
+                "url": "http://www.luc.page"
+            }
+        </script>
+    </head>
+    <body>
+        <h1>Luc van Kampen</h1>
+        <p>Hey its me!</p>
+    </body>
 </html>
