Introduce Opengraph & Banner

--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@
                 "url": "http://www.luc.page"
             }
         </script>
+        
+        <!-- Opengraph info -->
+        <meta property="og:title" content="Luc van Kampen" />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="http://www.luc.page" />
+        <meta property="og:image" content=".github/opengraph.png" />
+        <meta property="og:description" content="Hey its me!" />
+        <meta property="og:site_name" content="Luc van Kampen" />
+        <meta property="og:locale" content="en_US" />
+        
     </head>
     <body>
         <h1>Luc van Kampen</h1>
